--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chai": "^4.1.2",
     "dirty-chai": "^2.0.1",
     "mkdirp": "^0.5.1",
-    "mocha": "^4.0.1"
+    "mocha": "^4.0.1",
+    "sanitize-filename": "^1.6.1"
   }
 }
