--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Encrypting IPFS data",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha --timeout 20000"
   },
   "repository": {
     "type": "git",
@@ -22,10 +22,14 @@
   },
   "homepage": "https://github.com/richardschneider/ipfs-encryption#readme",
   "dependencies": {
+    "mkdirp": "^0.5.1",
+    "node-rsa": "^0.4.2",
+    "sanitize-filename": "^1.6.1"
+  },
+  "devDependencies": {
     "chai": "^4.1.2",
     "dirty-chai": "^2.0.1",
-    "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
-    "sanitize-filename": "^1.6.1"
+    "rimraf": "^2.6.2"
   }
 }
