--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "chai": "^4.1.2",
     "chai-string": "^1.4.0",
     "dirty-chai": "^2.0.1",
+    "libp2p-crypto": "^0.10.3",
     "mocha": "^4.0.1",
+    "multihashes": "^0.4.12",
+    "peer-id": "^0.10.2",
     "rimraf": "^2.6.2"
   }
 }
