--- a/package.json
+++ b/package.json
@@ -24,15 +24,17 @@
   "dependencies": {
     "async": "^2.6.0",
     "deepmerge": "^2.0.1",
+    "interface-datastore": "^0.4.1",
     "libp2p-crypto": "^0.10.3",
-    "mkdirp": "^0.5.1",
     "multihashes": "^0.4.12",
     "node-forge": "^0.7.1",
+    "pull-stream": "^3.6.1",
     "sanitize-filename": "^1.6.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-string": "^1.4.0",
+    "datastore-fs": "^0.4.1",
     "dirty-chai": "^2.0.1",
     "mocha": "^4.0.1",
     "peer-id": "^0.10.2",
